Feat: 상품 이미지 반환값 수정 (#27)
* feat: return image id and url

* feat: modify swagger

* fix: join column
